syntax = "proto3";

package slash.store;

option go_package = "gen/store";

message ActivityShorcutCreatePayload {
  int32 shortcut_id = 1;
}
